MongoDB config and dotenv setup done

--- a/package.json
+++ b/package.json
@@ -1,6 +1,25 @@
 {
+  "name": "coffee-store-server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/azijulhakimbd/coffee-store-server.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/azijulhakimbd/coffee-store-server/issues"
+  },
+  "homepage": "https://github.com/azijulhakimbd/coffee-store-server#readme",
+  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^6.16.0"
   }
